tests/samples/negative/types/mutually_recursive_struct_value.ax
module mutually_recursive_struct_value;

struct Left {
  right: Right;
}

struct Right {
  left: Left;
}

fn main() -> i32 {
  return 0;
}
